--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello World
+<!DOCTYPE html/>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Student Bio</title>
+</head>
+
+<h1>Jennifer Chen</h1>
+<img src="http://dummyimage.com/600x400/000/00ffd5.png" alt="Jennifer Chen"/>
+
+<body>
+    <p>My name is Jennifer Chen.  I am a Senior Financial Analyst at Acxiom currently attending the Data Analytics
+        Bootcamp. </p> 
+    <p>I am married and have a 3.5 year old daughter who attends preschool.</p>
+        
+    <ul>
+        <li><strong>Email:</strong> <a href="#email_section"></a>"jmtchen@gmail.com"></a></li>
+        <li><strong>Email:</strong> <a href="#linked_in"></a>"https://www.linkedin.com/in/jennifer-chen-8589744/"></a></li>
+        <li><strong>Email:</strong> <a href="#email_section"></a>"jmtchen@gmail.com"></a></li>
+    </ul>
+
+    <table>
+        <tr>
+            
+        </tr>
+            <th>
+
+            </th>
+    </table>
+
+ <!-- comments
+ -->
+
+ <a href="#">sampleName</a>
+
+
+</body>
+
