--- a/cloudiness.html
+++ b/cloudiness.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Latitude Analysis</title>
+    <title>Cloudiness</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css"> 
@@ -37,22 +37,16 @@
             <div class="col-md-8">
                 <div class="box box-left">
                     <section id="intro">
-                        <h1>Summary</h1>
+                        <h1>Cloudiness</h1>
                         <hr>
                         <figure>
-                            <a target="_blank" href="temperature.html" >
-                                <img src="temp.png" alt="Max Temperature" style="width:100%">
+                            <a target="_blank" href="cloudiness.html" >
+                                <img src="cloud.png" alt="Cloudiness" style="width:100%">
                             </a>
                         </figure>
 
                         <section id="summary">
-                            <p>The purpose of this project was to anlyze how weather changes as you get closer to the equator.
-                               To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset of over 500 cities. </p>
-                            <p></p>
-                            <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude.
-                               Factors we looked at included: tempertature, cloudiness, wind speed and humidity. This site provides the source data
-                               and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations
-                               noticed.</p>
+                            <p>There is no strong relationship between latitude and cloudiness, however, it is interesting to see that a strong band of cities sits at 0, 80, and 100% cloudiness. </p>
                         </section>
 
                     </section>
