--- a/temperature.html
+++ b/temperature.html
@@ -37,7 +37,7 @@
             <div class="col-md-8">
                 <div class="box box-left">
                     <section id="intro">
-                        <h1>Summary</h1>
+                        <h1>Temperature</h1>
                         <hr>
                         <figure>
                             <a target="_blank" href="temperature.html" >
@@ -46,13 +46,8 @@
                         </figure>
 
                         <section id="summary">
-                            <p>The purpose of this project was to anlyze how weather changes as you get closer to the equator.
-                               To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset of over 500 cities. </p>
-                            <p></p>
-                            <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude.
-                               Factors we looked at included: tempertature, cloudiness, wind speed and humidity. This site provides the source data
-                               and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations
-                               noticed.</p>
+                            <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude). 
+                               More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of year than the northern hemisphere. This may be due to the tilt of the earth.</p>
                         </section>
 
                     </section>
