--- a/comparison.html
+++ b/comparison.html
@@ -33,41 +33,18 @@
     <br>
     <br>             
     <div class="container">
-        <div class="row row-grid">
-            <div class="col-md-8">
-                <div class="box box-left">
-                    <section id="intro">
-                        <h1>Summary</h1>
-                        <hr>
-                        <figure>
-                            <a target="_blank" href="temperature.html" >
-                                <img src="temp.png" alt="Max Temperature" style="width:100%">
-                            </a>
-                        </figure>
-
-                        <section id="summary">
-                            <p>The purpose of this project was to anlyze how weather changes as you get closer to the equator.
-                               To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset of over 500 cities. </p>
-                            <p></p>
-                            <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude.
-                               Factors we looked at included: tempertature, cloudiness, wind speed and humidity. This site provides the source data
-                               and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations
-                               noticed.</p>
-                        </section>
-
-                    </section>
-                </div>
-            </div>
-
-
-            <div class="col-md-4">
-                <div class="box box-right">
-                    <h2>Visualizations</h2>
+                <div class="col-md-12">
+                <div class="box">
+                    <h2>Comparison: Latitude vs X.</h2>
                     <hr>
+                    <section id="summary">
+                            <p>Click any plot to get an in-depth analysis.  </p>
+                    </section>
+                            
                     <div class="row">
-                        <style>
-                            </style>
+                        <p></p>
                         <div class="col-xs-6 col-sm-3 col-md-6">
+                            <h3>vs. Max Temperature</h3>
                             <figure>
                                 <a href="temperature.html">
                                 <img src="temp.png" alt="Latitude vs. Max Temperature" style="width:100%;height:100%;" >    
@@ -76,6 +53,7 @@
                         </div>
 
                         <div class="col-xs-6 col-sm-3 col-md-6">
+                            <h3>vs. Humidity</h3>
                             <figure>
                                 <a href="humidity.html">
                                 <img src="humid.png" alt="Latitude vs. Humidity" style="width:100%;height:100%;">
@@ -84,6 +62,7 @@
                         </div>
 
                         <div class="col-xs-6 col-sm-3 col-md-6">
+                            <h3>vs Cloudiness</h3>
                             <figure>
                                 <a href="cloudiness.html">
                                     <img src="cloud.png" alt="Latitude vs. Cloudiness" style="width:100%;height:100%;">
@@ -92,6 +71,7 @@
                         </div>
 
                         <div class="col-xs-6 col-sm-3 col-md-6">
+                            <h3>vs Wind Speed</h3>
                             <figure>
                                 <a href="windspeed.html">
                                     <img src="wind.png" alt="Latitude vs. Wind Speed" style="width:100%;height:100%;">
