--- a/windspeed.html
+++ b/windspeed.html
@@ -37,22 +37,16 @@
             <div class="col-md-8">
                 <div class="box box-left">
                     <section id="intro">
-                        <h1>Summary</h1>
+                        <h1>Wind Speed</h1>
                         <hr>
                         <figure>
-                            <a target="_blank" href="temperature.html" >
-                                <img src="temp.png" alt="Max Temperature" style="width:100%">
+                            <a target="_blank" href="windspeed.html" >
+                                <img src="wind.png" alt="Wind Speed" style="width:100%">
                             </a>
                         </figure>
 
                         <section id="summary">
-                            <p>The purpose of this project was to anlyze how weather changes as you get closer to the equator.
-                               To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset of over 500 cities. </p>
-                            <p></p>
-                            <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude.
-                               Factors we looked at included: tempertature, cloudiness, wind speed and humidity. This site provides the source data
-                               and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations
-                               noticed.</p>
+                            <p>.</p>
                         </section>
 
                     </section>
